/* 
  Localizable.strings
  HyperTimeLogger

  Created by Maxim Pervushin on 23/06/15.
  Copyright (c) 2015 Maxim Pervushin. All rights reserved.
*/

"Sleep" = "Sleep";

"Personal" = "Personal";

"Road" = "Road";

"Work" = "Work";

"Improvement" = "Improvement";

"Recreation" = "Recreation";

"Time Waste" = "Time Waste";

"Reports: %lu" = "Reports: %lu";

"%02ld:%02ld:%02ld" = "%02ld:%02ld:%02ld";

"Send Mail" = "Send Mail";

"Copy to Pasteboard" = "Copy to Pasteboard";

"Cancel" = "Cancel";

"Reset content" = "Reset content";

"Are you sure want to reset all data?" = "Are you sure want to reset all data?";

"Reset" = "Reset";

"Reset defaults" = "Reset defaults";

"Are you sure want to reset all defaults?" = "Are you sure want to reset all defaults?";

"Export to CSV" = "Export to CSV";

"There is no data to export." = "There is no data to export.";

"Data export from Time Logger" = "Data export from Time Logger";

"Look at files attached" = "Look at files attached";