...
@dynamic identifier;

+ (NSArray *)colors {
    return @[
            [HTLColor colorWithColor:[UIColor paperColorRed] name:@"Red"],
            [HTLColor colorWithColor:[UIColor paperColorPink] name:@"Pink"],
            [HTLColor colorWithColor:[UIColor paperColorPurple] name:@"Purple"],
            [HTLColor colorWithColor:[UIColor paperColorDeepPurple] name:@"Deep Purple"],
            [HTLColor colorWithColor:[UIColor paperColorIndigo] name:@"Indigo"],
            [HTLColor colorWithColor:[UIColor paperColorBlue] name:@"Blue"],
            [HTLColor colorWithColor:[UIColor paperColorLightBlue] name:@"Light Blue"],
            [HTLColor colorWithColor:[UIColor paperColorCyan] name:@"Cyan"],
            [HTLColor colorWithColor:[UIColor paperColorTeal] name:@"Teal"],
            [HTLColor colorWithColor:[UIColor paperColorGreen] name:@"Green"],
...
