...
/* Class = "UILabel"; text = "[Total Time]"; ObjectID = "Phl-kh-mwn"; */
"Phl-kh-mwn.text" = "[Total Time]";

/* Class = "UILabel"; text = "[Title]"; ObjectID = "Sgj-un-jmQ"; */
"Sgj-un-jmQ.text" = "[Title]";

/* Class = "UIButton"; normalTitle = "Save"; ObjectID = "TdG-UY-5Cy"; */
"TdG-UY-5Cy.normalTitle" = "Save";

/* Class = "UIButton"; normalTitle = "Done"; ObjectID = "V2w-1W-PFM"; */
"V2w-1W-PFM.normalTitle" = "Done";

/* Class = "UILabel"; text = "Not enough data to display statistics."; ObjectID = "VDY-Iu-HDf"; */
...
